# dioptric

./: Cargo.toml  FIXME.md  LICENSE-lensfun  PLAN.md  README.md  REVIEW_CHANGES.md
src/: correction.rs  database.rs  error.rs  lib.rs  models.rs
tests/: integration.rs  model_verification.rs
