[package]
name = "dioptric"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust lens distortion, vignetting, and chromatic aberration correction using the lensfun database"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tasleson/dioptric"
documentation = "https://docs.rs/dioptric"
keywords = ["lens", "correction", "distortion", "vignetting", "lensfun"]
categories = ["multimedia::images"]

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
include_dir = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
